--- a/prod.yaml
+++ b/prod.yaml
@@ -1,6 +1,17 @@
-version: "2.4"
+#version: "2.4"
 
+#services:
+
+#    environment:
+
+version: "2.4"
 services:
+  odoo_proxy:
+    image: ghcr.io/tecnativa/docker-whitelist:latest
+    depends_on:
+      - odoo
+    networks:
+      default:
   odoo:
     extends:
       file: common.yaml
@@ -13,10 +24,16 @@ services:
       DB_FILTER: "^prod"
       DOODBA_ENVIRONMENT: "${DOODBA_ENVIRONMENT-prod}"
       INITIAL_LANG: "es_AR"
+      PORT: "6899 8069"
+      TARGET: odoo
     depends_on:
       - db
-    networks:
+    networks: &public
       default:
+      public:
+    ports:
+      - "0.0.0.0:6899:6899"
+      - "0.0.0.0:13069:13069"
     labels:
       doodba.domain.main: ""
 
@@ -27,43 +44,19 @@ services:
     env_file:
       - .docker/db-creation.env
     restart: unless-stopped
-    networks:
-      default:
-      inverseproxy_shared:
-    labels:
-      traefik.enable: "true"
-      traefik.docker.network: "inverseproxy_shared"
-      traefik.tcp.services.skoll-13-0-prod-database.loadbalancer.server.port: 5432
-      traefik.skoll-13-0-prod-database-0.port: 5432
-      traefik.tcp.routers.skoll-13-0-prod-database-0.rule: Host()
-      traefik.tcp.routers.skoll-13-0-prod-database-0.service: skoll-13-0-prod-database
-      traefik.skoll-13-0-prod-database-1.port: 5432
-      traefik.tcp.routers.skoll-13-0-prod-database-1.rule: Host()
-      traefik.tcp.routers.skoll-13-0-prod-database-1.service: skoll-13-0-prod-database
-      traefik.skoll-13-0-prod-database-2.port: 5432
-      traefik.tcp.routers.skoll-13-0-prod-database-2.rule: Host()
-      traefik.tcp.routers.skoll-13-0-prod-database-2.service: skoll-13-0-prod-database
-      traefik.skoll-13-0-prod-database-3.port: 5432
-      traefik.tcp.routers.skoll-13-0-prod-database-3.rule: Host()
-      traefik.tcp.routers.skoll-13-0-prod-database-3.service: skoll-13-0-prod-database
-      traefik.skoll-13-0-prod-database-4.port: 5432
-      traefik.tcp.routers.skoll-13-0-prod-database-4.rule: Host()
-      traefik.tcp.routers.skoll-13-0-prod-database-4.service: skoll-13-0-prod-database
-      traefik.skoll-13-0-prod-database-5.port: 5432
-      traefik.tcp.routers.skoll-13-0-prod-database-5.rule: Host()
-      traefik.tcp.routers.skoll-13-0-prod-database-5.service: skoll-13-0-prod-database
-      traefik.skoll-13-0-prod-database-6.port: 5432
-      traefik.tcp.routers.skoll-13-0-prod-database-6.rule: Host()
-      traefik.tcp.routers.skoll-13-0-prod-database-6.service: skoll-13-0-prod-database
-      traefik.skoll-13-0-prod-database-7.port: 5432
-      traefik.tcp.routers.skoll-13-0-prod-database-7.rule: Host()
-      traefik.tcp.routers.skoll-13-0-prod-database-7.service: skoll-13-0-prod-database
 
 networks:
   default:
-    driver_opts:
-      encrypted: 1
+    internal: ${DOODBA_NETWORK_INTERNAL-true}
+  public:
 
 volumes:
   filestore:
   db:
+#networks:
+#  default:
+#    driver_opts:
+#      encrypted: 1
+
+#  public:
+#    external: true
